--- a/website/ui/html/movies/view.page.tmpl
+++ b/website/ui/html/movies/view.page.tmpl
@@ -18,7 +18,7 @@
                             <span class="col-md-6 text-left">{{.Director}}</span>
                         </div>
                         <div class="form-group row d-flex justify-content-center">
-                            <span class="col-md-6 text-right">Rating:</span>
+                            <span class="col-md-6 text-right">Ratings:</span>
                             <span class="col-md-6 text-left">{{.Rating}}</span>
                         </div>
                     </div>
