--- a/website/ui/html/users/view.page.tmpl
+++ b/website/ui/html/users/view.page.tmpl
@@ -10,7 +10,7 @@
                 <div class="card mb-3 shadow-sm">
                     <div class="card-body">
                         <div class="form-group row d-flex justify-content-center">
-                            <span class="col-md-6 text-right">Full Name:</span>
+                            <span class="col-md-6 text-right">Full Names:</span>
                             <span class="col-md-6 text-left">{{.Name}} {{.LastName}}</span>
                         </div>
                     </div>
