--- a/website/ui/html/home.page.tmpl
+++ b/website/ui/html/home.page.tmpl
@@ -4,7 +4,7 @@
 
 <div class="album py-5 bg-light">
     <div class="container">
-        Select one of the links to consult the informationsss.
+        Select two of the links to consult the informationsss.
     </div>
 </div>
 
